--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t ginoWizy/docker-react -f Dockerfile.dev .
+  - docker build -t ginowizy/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true ginoWizy/docker-react npm run test
+  - docker run -e CI=true ginowizy/docker-react npm run test
